# embodied-claude

./: .cursorrules  .gitignore  .mcp.json.example  .mcp.json.ma-home.example  .mcp.json.windows.example  AGENT.md  AGENTS.md  AGENTS.md.old  CLAUDE.md  README-ja.md  README.md  SOUL.md.example  desires.sample.conf  embodied-claude.code-workspace  exported-session.md  mcpBehavior.toml  prottypemarkdown.md  socialPolicy.toml  test-autonomous.sh
.claude/: settings.json  settings.linux.json.example  settings.local.json.example  settings.windows.json.example
.cursor/: mcp.json
.research/: README.md
benchmarks/: vis-e4b-poc-2026-06-29-desk-tapo-desk-v2.md  vis-e4b-poc-2026-06-29-dining-tapo-dining-v2.md  vis-e4b-poc-2026-06-29-tapo-desk.md  vis-e4b-poc-2026-06-29-tapo-living.md  vis-e4b-poc-2026-06-29-usb-outside-v2-check.md  vis-e4b-poc-2026-06-29-usb-outside-v2.md  vis-e4b-poc-2026-06-29-usb-outside.md  vis-e4b-poc-2026-06-29-window.md  vis-e4b-poc-2026-06-29.md  vis-e4b-poc-verdict-2026-06-29.md
desire-system/: .env.example  backend.py  desire_updater.py  pyproject.toml  server.py
docs/: README.md  VISION.md  backlog-archive-ma-home.md  backlog-koyori.md  backlog-ma-home.md  cursor-session-export-2026-06.md  cursor_system_setup_for_local_llm_with.md  gateway-direct-actions.md  heartbeat-loop.md  intent-bucket-flow.md  irodori-tts-API-for-Python.md  kiosk-primary-say.md  koyori-input-sharing.md  koyori-kiosk-ime.md  koyori-near-eye.md  koyori-usb-c-recovery.md  lmstudio-model-change.md  ma-home-cursor-handoff.md  mission-A_Investigation-Report.md  open-loops-reminders.md  presence-ui.local.env.example  role-persistence-ma-home.md  session-export-ma-home.md  web_ui_design.md
memory-mcp/: README.md  pyproject.toml  pyrightconfig.json
presence-ui/: README.md  pyproject.toml  pyrightconfig.json
presence-ui/# 省略時 ~/.claude/koyori-surface/sessions/: 2fa84382-d062-4518-b197-06f3438045c5.jsonl  7d2b95b2-0310-48c5-b019-a71bd845e3c2.jsonl  7d439814-fe40-43f9-b39b-0e041d7df651.jsonl  a974bd6c-c9be-4820-bba8-948708242031.jsonl  a9d9cf87-4b25-4067-955c-1c1a4c07bdc1.jsonl
presence-ui/koyori-surface/: CLAUDE.md
presence-ui/koyori-surface/.claude/: settings.local.json
presence-ui/scripts/: ol7_classifier_poc.py
presence-ui/src/presence_ui/: __init__.py  deps.py  main.py  repo_env.py  schemas.py  utf8.py
presence-ui/src/presence_ui/cli/: __init__.py  doc_read.py  room_nav.py
presence-ui/src/presence_ui/gapi/: __init__.py  auth.py  calendar_client.py  calendar_writes.py  cli.py  policy.py  scopes.py
presence-ui/src/presence_ui/gateway/: __init__.py  aozora.py  autonomous_tick.py  backend.py  brief_s0.py  brief_s0_reasoning.py  brief_shadow.py  calendar_expectations.py  calendar_pending.py  calendar_prefetch.py  calendar_read_flow.py  calendar_read_search.py  calendar_read_stage.py  calendar_read_stage_prompts.py  calendar_read_window.py  calendar_resolve.py  calendar_stage.py  calendar_stage_prompts.py  calendar_write.py  calendar_write_flow.py  calendar_write_parse.py  ccs_integration.py  chat_stream.py  claude_session_mode.py  compose_memory_bridge.py  compose_recall_stage2.py  context_limits.py  correction_routing.py  deterministic_memory.py  direct_actions.py  doc_prefetch.py  doc_prefetch_stage.py  doc_prefetch_stage_prompts.py  food_topic_encode.py  gateway_llm_log.py  gateway_speak.py  gateway_turn_cache.py  gw_internal_filter.py  gw_resume.py  gw_silent.py  (+57 more)
presence-ui/src/presence_ui/heartbeat/: __init__.py  interpretation_shift.py  pulse_state.py  record.py  runner.py  schedule.py
presence-ui/src/presence_ui/services/: __init__.py  body_state.py  camera.py  camera_locations.py  capture_cache.py  chat.py  chat_image.py  claude_permissions.py  display_time.py  doc_memory.py  doc_read.py  dream_digest.py  dreaming.py  interact.py  kiosk_say.py  llm.py  lm_client.py  memory_context.py  native_history.py  native_session_prefs.py  navigation.py  near_camera.py  outbound.py  outbound_kiosk.py  outbound_push.py  outbound_sse.py  overnight_inner_voice.py  pdf_extract.py  room_events.py  room_say_pending.py  room_scene.py  session_log.py  sessions.py  somatic.py  somatic_context.py  somatic_escalation.py  somatic_probe.py  speak_presence.py  status.py  stm_episode.py  (+5 more)
presence-ui/src/presence_ui/static/: app.js  cc-messages.js  chat-markdown.js  index.html  koyori-voice.js  poc-native.html  style.css  training-persona.html
presence-ui/src/presence_ui/training/: __init__.py  cheerleader_strip.py  persona_curation.py  persona_export.py  persona_inner_export.py  persona_inner_review.py  persona_review.py  reflection_text.py
presence-ui/tests/: test_aozora.py  test_body_state.py  test_brief_s0.py  test_brief_s0_reasoning.py  test_brief_shadow.py  test_calendar_expectations.py  test_calendar_prefetch.py  test_calendar_read_flow.py  test_calendar_read_search.py  test_calendar_read_stage_prompts.py  test_calendar_read_window.py  test_calendar_write.py  test_calendar_write_flow.py  test_calendar_write_staged.py  test_camera_locations.py  test_camera_surface_vision.py  test_ccs_integration.py  test_chat.py  test_chat_image.py  test_chat_stream.py  test_cheerleader_strip.py  test_classifier_model.py  test_claude_permissions.py  test_claude_session_mode.py  test_compose_memory_bridge.py  test_compose_recall_stage2.py  test_context_limits.py  test_correction_routing.py  test_desire_gateway_actions.py  test_deterministic_memory.py  test_direct_actions.py  test_doc_prefetch_stage.py  test_doc_read.py  test_doc_read_memory.py  test_doc_read_retrieve.py  test_dreaming.py  test_food_topic_encode.py  test_gapi_policy.py  test_gapi_writes.py  test_gateway.py  (+93 more)
presets/: README.md  koyori-SOUL.core.md  koyori-dialect-lint.json  koyori-osaka-accent-phrases.yaml  koyori-osaka-grammar.distill.md  koyori-osaka-grammar.yaml
scripts/: backfill-food-topic-facts.py  brief_s0_smoke.py  c1-native-poc.ps1  check-dreaming.ps1  (+119 more)
sociality-mcp/: README.md  pyproject.toml  pyrightconfig.json
sociality-mcp/src/sociality_mcp/: __init__.py  server.py
sociality-mcp/tests/: test_sociality.py
(+235 files in other folders)
