[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presence-ui"
version = "0.1.0"
description = "Koyori's Room — Presence dashboard API and minimal web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "social-core",
    "social-state-mcp",
    "self-narrative-mcp",
    "interaction-orchestrator-mcp",
    "boundary-mcp",
    "system-temperature-mcp",
    "wifi-cam-mcp",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
presence-ui = "presence_ui.main:run"
room-nav = "presence_ui.cli.room_nav:main"

[tool.hatch.build.targets.wheel]
packages = ["src/presence_ui"]

[tool.uv.sources]
social-core = { path = "../sociality-mcp/packages/social-core" }
social-state-mcp = { path = "../sociality-mcp/packages/social-state-mcp" }
self-narrative-mcp = { path = "../sociality-mcp/packages/self-narrative-mcp" }
interaction-orchestrator-mcp = { path = "../sociality-mcp/packages/interaction-orchestrator-mcp" }
boundary-mcp = { path = "../sociality-mcp/packages/boundary-mcp" }
memory-mcp = { path = "../memory-mcp" }
relationship-mcp = { path = "../sociality-mcp/packages/relationship-mcp" }
joint-attention-mcp = { path = "../sociality-mcp/packages/joint-attention-mcp" }
system-temperature-mcp = { path = "../system-temperature-mcp" }
wifi-cam-mcp = { path = "../wifi-cam-mcp" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
