[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presence-ui"
version = "0.1.0"
description = "Koyori's Room — Presence dashboard API and minimal web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "claude-code-server",
    "social-core",
    "social-state-mcp",
    "self-narrative-mcp",
    "interaction-orchestrator-mcp",
    "boundary-mcp",
    "relationship-mcp",
    "joint-attention-mcp",
    "system-temperature-mcp",
    "wifi-cam-mcp",
    "usb-webcam-mcp",
    "tts-mcp",
    "tzdata>=2024.1; sys_platform == 'win32'",
    "numpy>=1.26.0",
    "pymupdf>=1.24.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
presence-ui = "presence_ui.main:run"
room-nav = "presence_ui.cli.room_nav:main"
doc-read = "presence_ui.cli.doc_read:main"
google-oauth-consent = "presence_ui.gapi.cli:consent_main"
gapi-calendar-smoke = "presence_ui.gapi.cli:list_smoke_main"
gapi-calendar-write-smoke = "presence_ui.gapi.cli:write_smoke_main"
gapi-calendar-read-window-smoke = "presence_ui.gapi.cli:read_window_smoke_main"

[tool.hatch.build.targets.wheel]
packages = ["src/presence_ui"]

[tool.uv.sources]
claude-code-server = { path = "../.research/claude-code-server" }
social-core = { path = "../sociality-mcp/packages/social-core" }
social-state-mcp = { path = "../sociality-mcp/packages/social-state-mcp" }
self-narrative-mcp = { path = "../sociality-mcp/packages/self-narrative-mcp" }
interaction-orchestrator-mcp = { path = "../sociality-mcp/packages/interaction-orchestrator-mcp" }
boundary-mcp = { path = "../sociality-mcp/packages/boundary-mcp" }
memory-mcp = { path = "../memory-mcp" }
relationship-mcp = { path = "../sociality-mcp/packages/relationship-mcp" }
joint-attention-mcp = { path = "../sociality-mcp/packages/joint-attention-mcp" }
system-temperature-mcp = { path = "../system-temperature-mcp" }
wifi-cam-mcp = { path = "../wifi-cam-mcp" }
usb-webcam-mcp = { path = "../usb-webcam-mcp" }
tts-mcp = { path = "../tts-mcp" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = [
    "src",
    "../sociality-mcp/packages/social-core/src",
    "../sociality-mcp/packages/interaction-orchestrator-mcp/src",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: network-dependent regression (Brave API, etc.)",
]
