[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sociality-mcp"
version = "0.1.0"
description = "Unified MCP facade for こより's social middle layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.7.0",
    "social-core",
    "social-state-mcp",
    "relationship-mcp",
    "joint-attention-mcp",
    "boundary-mcp",
    "self-narrative-mcp",
    "interaction-orchestrator-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
sociality-mcp = "sociality_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sociality_mcp"]

[tool.uv.sources]
social-core = { path = "packages/social-core" }
social-state-mcp = { path = "packages/social-state-mcp" }
relationship-mcp = { path = "packages/relationship-mcp" }
joint-attention-mcp = { path = "packages/joint-attention-mcp" }
boundary-mcp = { path = "packages/boundary-mcp" }
self-narrative-mcp = { path = "packages/self-narrative-mcp" }
interaction-orchestrator-mcp = { path = "packages/interaction-orchestrator-mcp" }

[tool.uv]
# Core2 / pre-x86-64-v2 CPUs: numpy 2.x wheels require X86_V2.
constraint-dependencies = ["numpy==1.26.4"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
